--- a/index.html
+++ b/index.html
@@ -24,7 +24,13 @@
         
         <!-- Mostrar puntuación -->
         <div id="resultado">
-            <p>Puntuación: <span id="puntuacion">0</span></p>
+            <p>Puntuación Total: <span id="puntuacion">0</span></p>
+        </div>
+        
+        <!-- Historial de tiradas -->
+        <div id="historial">
+            <h2>Historial de Tiradas</h2>
+            <!-- Aquí se llenará el historial de tiradas -->
         </div>
     </div>
 
