--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Juego de Dados</title>
+    <title>Juego de Dados - Casino</title>
     <link rel="stylesheet" href="styles.css"> <!-- Vincula el archivo de CSS -->
 </head>
 <body>
     <div class="container">
-        <h1>Juego de Dados</h1>
+        <h1>🎲 Juego de Dados 🎲</h1>
         
         <!-- Zona de dados -->
         <div id="dados">
@@ -38,3 +38,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
