--- a/index.html
+++ b/index.html
@@ -10,6 +10,13 @@
     <div class="container">
         <h1>🎲 Juego de Dados 🎲</h1>
         
+        <!-- Imágenes de personajes de anime -->
+        <div class="imagenes-anime">
+            <img src="https://example.com/image1.jpg" alt="Personaje Anime 1" class="imagen-anime">
+            <img src="https://example.com/image2.jpg" alt="Personaje Anime 2" class="imagen-anime">
+            <img src="https://example.com/image3.jpg" alt="Personaje Anime 3" class="imagen-anime">
+        </div>
+
         <!-- Zona de dados -->
         <div id="dados">
             <div class="dado" id="dado1">0</div>
@@ -38,4 +45,5 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
