--- a/index.html
+++ b/index.html
@@ -12,9 +12,7 @@
         
         <!-- Imágenes de personajes de anime -->
         <div class="imagenes-anime">
-            <img src="https://example.com/image1.jpg" alt="Personaje Anime 1" class="imagen-anime">
-            <img src="https://example.com/image2.jpg" alt="Personaje Anime 2" class="imagen-anime">
-            <img src="https://example.com/image3.jpg" alt="Personaje Anime 3" class="imagen-anime">
+            <img src="https://www.google.com/search?sca_esv=4e4a8a2bd4267cc2&q=harry+potter+anime+quidditch&udm=2&fbs=AEQNm0CbCVgAZ5mWEJDg6aoPVcBgWizR0-0aFOH11Sb5tlNhdzTfxpAVBoexMFZnKJBpl_OnTFfcge8advfRBIXE7C_R3bzV9u86XU4GWJ_RTx223GGhIgTgCCny6jaClFPdxh_nj1h8IqWAS4CBUmEgUIbVGVefczL-yMjy-fFlSVYjaO99Yb_PSz2oCVDcJHRptLx85gCSe6lWRvkperQcFL-8WWqOZA&sa=X&ved=2ahUKEwj1r8WvoPKIAxWSwgIHHcVtDXYQtKgLegQIFhAB&biw=1920&bih=906&dpr=1#vhid=n7cEv-PKJo5fTM&vssid=mosaic" alt="Personaje Anime 1" class="imagen-anime">
         </div>
 
         <!-- Zona de dados -->
