--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         
         <!-- Imágenes de personajes de anime -->
         <div class="imagenes-anime">
-            <img src="" alt="Personaje Anime 1" class="imagen-anime">
+            <img src="QuidditchWallpaper.png" alt="Personaje Anime 1" class="imagen-anime">
         </div>
 
         <!-- Zona de dados -->
