--- a/index.html
+++ b/index.html
@@ -42,6 +42,16 @@
     <!-- Vincula el archivo de JavaScript -->
     <script src="script.js"></script>
 </body>
+    <!-- Contenedor del pop-up -->
+<div id="popup" class="popup">
+    <div class="popup-content">
+        <span class="close" id="closePopup">&times;</span>
+        <h2>¡Fin de la Partida!</h2>
+        <p id="puntuacionFinal"></p>
+        <button id="jugarOtraPartida" class="button-gryffindor">Jugar Otra Partida</button>
+    </div>
+</div>
+
 </html>
 
 
