--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> DICE QUIDDITCH MATCH</title>
+    <title> DADOS QUIDDITCH </title>
     <link rel="stylesheet" href="styles.css"> <!-- Vincula el archivo de CSS -->
 </head>
 <body>
     <div class="container">
-        <h1>DICE QUIDDITCH MATCH</h1>
+        <h1>🎲 DADOS QUIDDITCH 🎲</h1>
 
         <!-- Imágenes de personajes de anime -->
         <div class="imagenes-anime">
