--- a/index.html
+++ b/index.html
@@ -124,5 +124,22 @@
     <!-- Vincula el archivo de JavaScript -->
     <script src="script.js"></script>
 </body>
+    <body>
+    <div class="container">
+        <h1>🎲 DADOS QUIDDITCH 🎲</h1>
+
+        <!-- Sección de reglas de puntuación -->
+        <div class="reglas">
+            <h2>Reglas de Puntuación</h2>
+            <ul>
+                <li>5 iguales = 150 puntos (atrapar la snitch dorada)</li>
+                <li>Póker (4 iguales) = 100 puntos</li>
+                <li>Full (3 iguales y 2 iguales) = 60 puntos</li>
+                <li>Escalera = 50 puntos</li>
+                <li>Trío = 30 puntos</li>
+                <li>Dos pares = 20 puntos</li>
+                <li>Un par = 10 puntos</li>
+            </ul>
+        </div>
 </html>
 
