--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 
         <!-- Mostrar puntuación -->
         <div id="resultado">
-            <p>Puntuación Total Jugador: <span id="puntuacion">0</span></p>
+            <p>Puntuación Total Gryffindor: <span id="puntuacion">0</span></p>
         </div>
 
         <!-- Historial de tiradas -->
@@ -114,8 +114,8 @@
 <div id="popup" class="popup" style="display: none;">
     <div class="popup-content">
         <h2>Fin de la Partida</h2>
-        <p>Puntuación Total Jugador: <span id="puntuacionJugador"></span></p>
-        <p>Puntuación Total Computadora: <span id="puntuacionComputadora"></span></p>
+        <p>Puntuación Total Gryffindor: <span id="puntuacionJugador"></span></p>
+        <p>Puntuación Total Slytherin: <span id="puntuacionComputadora"></span></p>
         <p id="resultadoFinal"></p>
         </div>
 
@@ -128,7 +128,7 @@
 </body>
     <body>
     <div class="container">
-        <h1>🎲 NORMAS DEL JUEGO 🎲</h1>
+        <h1> NORMAS DEL JUEGO </h1>
 
         <!-- Sección de reglas de puntuación -->
         <div class="reglas">
